# SpcGen

./: CMakeLists.txt  Readme.md  SpcGen.cpp  Todo.md
core/: CMakeLists.txt
core/include/: ApplicationManager.h  ArgReader.h
core/src/: ApplicationManager.cpp  ArgReader.cpp
device/: CMakeLists.txt
device/include/: DRSDevice.h  DigitizerDevice.h  IDevice.h  IDevice.icpp
device/src/: DRSDevice.cpp  DigitizerDevice.cpp  IDevice.cpp
doc/: doc.tex
examples/config/: drs.cfg  psd.cfg  psdWaveform.cfg  waveform.cfg
global/: CMakeLists.txt
global/include/: IDate.h  IHist.h  Parameters.h  Types.h
parser/: CMakeLists.txt
parser/include/: DRSConfigParser.h  DRSConsoleParser.h  DigitizerConfigParser.h  DigitizerConsoleParser.h  IDRSParser.h  IDigitizerParser.h  IParser.h  ParserFactory.h
parser/src/: DRSConfigParser.cpp  DRSConsoleParser.cpp  DigitizerConfigParser.cpp  DigitizerConsoleParser.cpp  ParserFactory.cpp
plotter/: CMakeLists.txt
plotter/include/: Graph.h  Plotter.h
plotter/src/: Plotter.cpp
